[package]
name = "tokio-socketcan"
version = "0.2.0"
authors = ["Terry Kerr <root@oefd.ca>"]
edition = "2018"
description = "Asynchronous Linux SocketCAN sockets with tokio"
license = "MIT"
repository = "https://github.com/oefd/tokio-socketcan"

[dependencies]
# socketcan = "1.7"
socketcan = { git = "https://github.com/j4r0u53k/socketcan-rs.git", branch = "can-fd" }
futures = "0.3"
mio = "0.6"
libc = "0.2"
thiserror = "1.0"
tokio = { version = "0.2", features = ["net", "macros"] }

[dev-dependencies]
futures-timer = "3.0"
futures-util = "0.3"

[features]
can_fd = []
